<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/kanan"
        android:contentDescription="@string/todo1" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="75dp"
        android:layout_marginStart="200dp"
        android:src="@drawable/kiri"
        android:contentDescription="@string/todo2" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/logo2"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/todo3" />


    <TextView
        android:fontFamily="@assets/fonts/Montserrat.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="277dp"
        android:text="@string/Compare"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="@assets/fonts/Montserrat.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="275dp"
        android:layout_marginBottom="292dp"
        android:text="@string/travel_save_mone"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:background="@drawable/edit_text_style"
            android:fontFamily="@assets/fonts/Montserrat.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:text="@string/email"
            android:autofillHints=""
            android:inputType="" />

        <EditText
            android:background="@drawable/edit_text_style"
            android:fontFamily="@assets/fonts/Montserrat.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/passwd"
            android:autofillHints=""
            android:inputType="" />

        <Button
            android:fontFamily="@assets/fonts/Montserrat.ttf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle"
            android:text="@string/login1"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:fontFamily="@assets/fonts/Montserrat.ttf"
            android:id="@+id/creteit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/don_t_have_account_create_it"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.966" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>